Actually fix that /summon NPE, and kinda refactor

--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,7 @@ plugins {
 }
 
 repositories {
-    maven {
-        url 'https://jitpack.io'
-    }
+    maven { url 'https://jitpack.io' }
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_8
