--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,13 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx2G
 # Fabric Properties
-minecraft_version=1.16.5
-yarn_mappings=1.16.5+build.3
-loader_version=0.11.1
+minecraft_version=1.17-rc2
+yarn_mappings=1.17-rc2+build.10
+loader_version=0.11.3
 # Mod Properties
-mod_version=1.3-mc1.16.4-fabric
+mod_version=1.4-mc1.17-fabric
 maven_group=io.github.alkyaly
 archives_base_name=time-in-a-bottle
 # Dependencies
-microconfig_version=1.0.5
-fabric_version=0.25.1+build.416-1.16
+microconfig_version=2.0.1
+fabric_version=0.34.9+1.17
