--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx2G
 # Fabric Properties
-minecraft_version=1.17-rc2
-yarn_mappings=1.17-rc2+build.10
+minecraft_version=1.17
+yarn_mappings=1.17+build.12
 loader_version=0.11.3
 # Mod Properties
 mod_version=1.4-mc1.17-fabric
